# pytijo_api_client

./: .gitignore  .gitlab-ci.yml  README.md  azure-pipelines.yml  dev-requirements.txt  setup.cfg  setup.py  tox.ini
pytijo_api_client/: command.py  tijoapi.py  utils.py
tests/: test_api_core.py  test_utils.py
