[metadata]
name = pytijo_api_client
summary = Tijo API client
description-file = README.md
author = Jon Castro
author-email = jon@tijo.io
home-page = http://tijo.io
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages =
    pytijo_api_client

extra_files =
    setup.py
    README.md

[global]

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
